--- a/public/index.html
+++ b/public/index.html
@@ -386,21 +386,19 @@ width: 140px;
   </head>
   <body>
     <div class="container">
-      <h1>Vanilla HTML JS netlify example</h1>
-      <div class="center"><button id="button">Click me</button></div>
-      <pre id="message">
-      Click the button!
-    </pre
-      >
-      <div>
-        <a href="https://github.com/netlify-labs/vanilla-html-js-example">View source</a>
-      </div>
+      <h1>time.makisu.co</h1>
       <table cellspacing="5px">
 <tr class="hrow">
-<td>GMT</td><td>Vancouver</td><td>San Francisco</td><td>Seattle</td>
+<td>GMT</td><td>Manila</td><td>San Francisco</td><td>Dubai</td>
 </tr>
 <tr>
-<td><span id="GMT"></span></td><td><span id="Vancouver"></span></td><td><span id="SanFrancisco"></span></td><td><span id="Seattle"></span></td>
+<td><span id="GMT"></span></td><td><span id="HongKong"></span></td><td><span id="SanFrancisco"></span></td><td><span id="Dubai"></span></td>
+</tr>
+<tr class="hrow">
+<td>Vienna</td><td>Vancouver</td><td>Austin</td><td>New York</td>
+</tr>
+<tr>
+<td><span id="GMT"></span></td><td><span id="Vienna"></span></td><td><span id="Chicago"></span></td><td><span id="NewYork"></span></td>
 </tr>
 <tr class="hrow">
 <td>Los Angeles</td><td>Denver</td><td>Mexico City</td><td>Houston</td>
@@ -451,10 +449,10 @@ width: 140px;
 <td><span id="Frankfurt"></span></td><td><span id="Rome"></span></td><td><span id="Berlin"></span></td><td><span id="Prague"></span></td>
 </tr>
 <tr class="hrow">
-<td>Vienna</td><td>Stockholm</td><td>Athens</td><td>Helsinki</td>
+<td>Vancouver</td><td>Stockholm</td><td>Athens</td><td>Helsinki</td>
 </tr>
 <tr>
-<td><span id="Vienna"></span></td><td><span id="Stockholm"></span></td><td><span id="Athens"></span></td><td><span id="Helsinki"></span></td>
+<td><span id="Vancouver"></span></td><td><span id="Stockholm"></span></td><td><span id="Athens"></span></td><td><span id="Helsinki"></span></td>
 </tr>
 <tr class="hrow">
 <td>Minsk</td><td>Istanbul</td><td>Cairo</td><td>Jerusalem</td>
@@ -463,10 +461,10 @@ width: 140px;
 <td><span id="Minsk"></span></td><td><span id="Istanbul"></span></td><td><span id="Cairo"></span></td><td><span id="Jerusalem"></span></td>
 </tr>
 <tr class="hrow">
-<td>Beirut</td><td>Moscow</td><td>Baghdad</td><td>Dubai</td>
+<td>Beirut</td><td>Moscow</td><td>Baghdad</td><td>Seattle</td>
 </tr>
 <tr>
-<td><span id="Beirut"></span></td><td><span id="Moscow"></span></td><td><span id="Baghdad"></span></td><td><span id="Dubai"></span></td>
+<td><span id="Beirut"></span></td><td><span id="Moscow"></span></td><td><span id="Baghdad"></span></td><td><span id="Seattle"></span></td>
 </tr>
 <tr class="hrow">
 <td>Bangkok</td><td>Jakarta</td><td>Hong Kong</td><td>Beijing</td>
