--- a/public/index.html
+++ b/public/index.html
@@ -398,7 +398,7 @@ width: 140px;
 <td>Vienna</td><td>Vancouver</td><td>Austin</td><td>New York</td>
 </tr>
 <tr>
-<td><span id="GMT"></span></td><td><span id="Vienna"></span></td><td><span id="Chicago"></span></td><td><span id="NewYork"></span></td>
+<td><span id="Vienna"></span></td><td><span id="Vancouver"></span></td><td><span id="Chicago"></span></td><td><span id="NewYork"></span></td>
 </tr>
 <tr class="hrow">
 <td>Los Angeles</td><td>Denver</td><td>Mexico City</td><td>Houston</td>
